basic page is created

--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>ravipratihast</title>
 </head>
 <body>
+
+    <!-- nav-section -->
+    <nav class="navigation">
+        <h1>Ravi Shankar Pratihast</h1>
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Project</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
+
+    <!-- main  -->
+
+    <main class="main-container"></main>
+
+    <!-- footer -->
+
+    <footer class="footer-part"></footer>
+
     
 </body>
 </html>
